--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <title></title>
-
-  <style>
-
-  </style>
+  <title>Frontend Mentor | Product preview card component</title>
 </head>
 
 <body>
