--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
   <link rel="stylesheet" href="style.css" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 
 <body>
-  <img src="images/image-product-desktop.jpg" alt="Imagem Promocional de um Eau De Parfum" height="100" align="left" />
-  <header>
-    <h5>P E R F U M E</h5>
-    <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
-    <p>
-      A floral, solar and voluptuous <br> interpretation composed <br> by Olivier Polge,
-      Perfumer-Creator <br> for the House of CHANEL.
-    </p>
-    <h2>$149.99</h2>
-    <h6><s>$169.99</s></h6>
-    <button>Add to Cart</button>
-  </header>
+  <div id="caixa">
+    <img id="perfume" src="images/image-product-desktop.jpg" alt="Imagem Promocional de um Eau De Parfum" />
+    <header>
+      <h5>P E R F U M E</h5>
+      <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
+      <p>
+        A floral, solar and voluptuous <br> interpretation composed <br> by Olivier Polge,
+        Perfumer-Creator <br> for the House of CHANEL.
+      </p>
+      <div id="precos">
+        <h2>$149.99</h2>
+        <h6><s>$169.99</s></h6>
+      </div>
+      <button><img id="carrinho" src="images/icon-cart.svg" alt="Imagem de um carrinho de Supermercado" />Add to Cart</button>
+    </header>  
+  </div>
 
 </body>
 
