--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Product preview card component</title>
+  <title>Frontend Mentor | Product Preview Card Component</title>
 </head>
 
 <body>
