--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Product Preview Card Component</title>
+
 </head>
 
 <body>
@@ -27,22 +28,14 @@
         <h6><s>$169.99</s></h6>
       </div>
       <button><img id="carrinho" src="images/icon-cart.svg" alt="Carrinho de Supermercado" />Add to Cart</button>
-    </header>  
+    </header>
   </div>
-
+  <footer class="attribution">
+    <span>Challenge by&nbsp;</span>
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+    <span>. Coded by&nbsp;</span>
+    <a href="https://github.com/victoriamnx">victoriamnx</a>
+    <span>.</span>
 </body>
 
 </html>
-
-<!--<div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Your Name Here</a>.
-</div>
-.attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
