--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
   <div id="caixa">
-    <img id="perfume" src="images/image-product-desktop.jpg" alt="Gabrielle Eau De Parfum" />
+    <div id="imagens">
+    <img id="desktop" src="components/images/image-product-desktop.jpg" alt="Gabrielle Eau De Parfum" />
+    <img id="mobile" src="components/images/image-product-mobile.jpg" alt="Gabrielle Eau De Parfum" />
+    </div>
     <header>
       <h5>P E R F U M E</h5>
       <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
@@ -27,7 +30,7 @@
         <h2>$149.99</h2>
         <h6><s>$169.99</s></h6>
       </div>
-      <button><img id="carrinho" src="images/icon-cart.svg" alt="Carrinho de Supermercado" />Add to Cart</button>
+      <button><img id="carrinho" src="components/images/icon-cart.svg" alt="Carrinho de Supermercado" />Add to Cart</button>
     </header>
   </div>
   <footer class="attribution">
