--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <div id="caixa">
     <div id="imagens">
-    <img id="desktop" src="components/images/image-product-desktop.jpg" alt="Gabrielle Eau De Parfum" />
-    <img id="mobile" src="components/images/image-product-mobile.jpg" alt="Gabrielle Eau De Parfum" />
+      <img id="desktop" src="components/images/image-product-desktop.jpg" alt="Gabrielle Eau De Parfum" />
+      <img id="mobile" src="components/images/image-product-mobile.jpg" alt="Gabrielle Eau De Parfum" />
     </div>
     <header>
       <h5>P E R F U M E</h5>
@@ -30,15 +30,15 @@
         <h2>$149.99</h2>
         <h6><s>$169.99</s></h6>
       </div>
-      <button><img id="carrinho" src="components/images/icon-cart.svg" alt="Carrinho de Supermercado" />Add to Cart</button>
+      <button><img id="carrinho" src="components/images/icon-cart.svg" alt="Carrinho de Supermercado" />Add to
+        Cart</button>
     </header>
   </div>
-  <footer class="attribution">
-    <span>Challenge by&nbsp;</span>
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-    <span>. Coded by&nbsp;</span>
-    <a href="https://github.com/victoriamnx">victoriamnx</a>
-    <span>.</span>
+  
+  <div class="attribution">
+      <span>Challenge by&nbsp;</span><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
+      <span> Coded by&nbsp;</span><a href="https://github.com/victoriamnx">victoriamnx.</a>
+    </div>
 </body>
 
 </html>
